# so

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
